syntax = "proto3";

option go_package = "./pb";

package pb;

message KqMsg{
  int64  Op     = 1;
  string ServerId     =2;
  int64  RoomId       =3;
  int64  UserId      =4;
  bytes Msg          =5;
  int64 Count        =6;
  map<string, string> RoomUserInfo =7;
}

message KqRoomInfo{
  int64 Op           =1;
  int64 RoomId       =2;
  int64 Count        =3;
  map<string,string> RoomUserInfo = 4;
}

message kqRoomCountMsg{
  int64  Count =1;
  int64  Op    =2;
}

message TaskSuccessReply {
  int64 Code =1;
  string Msg=2;
}

message TaskSend{
  string Send =1;
}

service task {
  //返送单条消息
  rpc pushSingleToConnect(TaskSend) returns(TaskSuccessReply);

}